// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Button Action 1`] = `
.c4 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c4 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5:hover:not(.c0:active) {
  color: rgba(110,132,154,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 0;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: box-shadow 0.15s ease,color 0.15s ease;
  transition: box-shadow 0.15s ease,color 0.15s ease;
  height: 34px;
  width: 34px;
  color: rgba(110,132,154,0.75);
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 4px 0 rgba(17,49,96,0.16);
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5d9df5;
  box-shadow: 0 0 0 1px #fff,0 1px 2px 1px rgba(17,49,96,0.16);
}

.c2:focus,
.c2:active {
  outline: 0;
}

.c2:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c2:hover:not(.c1:active) {
  color: rgba(110,132,154,1);
}

.c2:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5d9df5;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c2:hover {
  box-shadow: 0 0 0 1px #fff,0 2px 4px 1px rgba(17,49,96,0.16);
  color: #5d9df5;
}

.c6 .c3 {
  color: #fff;
}

.c7 .c3 {
  color: #6e849a;
}

.c8 .c3 {
  display: inline-block;
  margin-left: 12px;
}

<button
  className="c0 c1 c2"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c3 c4"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;

exports[`Storyshots Icon Button Flat 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 0;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: box-shadow 0.15s ease,color 0.15s ease;
  transition: box-shadow 0.15s ease,color 0.15s ease;
  height: 34px;
  width: 34px;
  color: #8da2b5;
  background: inherit;
}

.c1:focus,
.c1:active {
  outline: 0;
}

.c1:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c1:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5d9df5;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c4:hover:not(.c0:active) {
  color: rgba(110,132,154,1);
}

.c5 .c2 {
  color: #fff;
}

.c6 .c2 {
  color: #6e849a;
}

.c7 .c2 {
  display: inline-block;
  margin-left: 12px;
}

<button
  className="c0 c1"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c2 c3"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;

exports[`Storyshots Icon Button Normal 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 0;
  background-color: #fff;
  border: 1px solid transparent;
  -webkit-transition: box-shadow 0.15s ease,color 0.15s ease;
  transition: box-shadow 0.15s ease,color 0.15s ease;
  height: 34px;
  width: 34px;
  color: rgba(110,132,154,0.75);
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 4px 0 rgba(17,49,96,0.16);
}

.c1:focus,
.c1:active {
  outline: 0;
}

.c1:hover {
  box-shadow: 0 0 0 1px rgba(17,49,96,0.04),0 2px 6px 0 rgba(17,49,96,0.24);
}

.c1:hover:not(.c0:active) {
  color: rgba(110,132,154,1);
}

.c1:active {
  background: linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;
  border: 1px solid #fff;
  color: #5d9df5;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
}

.c4 .c2 {
  color: #fff;
}

.c5 .c2 {
  color: #6e849a;
}

.c6 .c2 {
  display: inline-block;
  margin-left: 12px;
}

<button
  className="c0 c1"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c2 c3"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;
